--- a/frontend/ata-dashboard/package.json
+++ b/frontend/ata-dashboard/package.json
@@ -10,16 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@headlessui/react": "^2.2.1",
     "@heroicons/react": "^2.2.0",
+    "@material-tailwind/react": "^2.1.10",
+    "@mui/material": "^7.0.2",
     "@tailwindcss/vite": "^4.1.3",
+    "axios": "^1.10.0",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
+    "recharts": "^2.15.3",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
